# desafio-fastapi-ormar

./: .gitignore  pyproject.toml
api/: __main__.py  config.py  cria_tabelas.py  db.py  rotas.py
api/controllers/: generic.py  usuarios_controller.py
api/controllers/utils/: delete_controller.py  get_all_controller.py  get_controller.py  patch_controller.py  post_controller.py
api/models/: import_models.py  usuario.py
api/models/requests/: patch_usuario.py
tests/: conftest.py
tests/api/: test_root.py  test_usuarios.py
tests/unit/model/: test_usuario.py
tests/utils/: usuarios.py
