[tool.poetry]
name = "desafio-fastapi-ormar"
version = "0.1.0"
description = ""
authors = ["Cassio Augusto"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
aiosqlite = "^0.18.0"
ormar = "^0.12.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
